# love

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  justfile
.github/workflows/: docker.yml
frontend/: app.ts  index.html  package.json  style.css
src/: api.rs  cover.rs  main.rs  search.rs  transcode.rs
