[package]
name = "love"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
percent-encoding = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
strip = true
